--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -132,4 +132,7 @@
   <data name="USERNAME_REQUIRED" xml:space="preserve">
     <value>The UserName is required</value>
   </data>
+  <data name="USER_NOT_FOUND" xml:space="preserve">
+    <value>User not found</value>
+  </data>
 </root>
